@@ -24,6 +24,7 @@ package cascading.operation.filter;
 import java.beans.ConstructorProperties;
 
 import cascading.flow.FlowProcess;
+import cascading.operation.ConcreteCall;
 import cascading.operation.Filter;
 import cascading.operation.FilterCall;
 import cascading.tuple.Fields;
@@ -33,7 +34,7 @@ import cascading.tuple.TupleEntry;
  * Class Xor is a {@link Filter} class that will logically 'xor' (exclusive or) the results of the
  * constructor provided Filter instances.
  * <p/>
- * Logically, if {@link Filter#isRemove(cascading.flow.FlowProcess,cascading.operation.FilterCall)} returns {@code true} for all given instances,
+ * Logically, if {@link Filter#isRemove(cascading.flow.FlowProcess, cascading.operation.FilterCall)} returns {@code true} for all given instances,
  * or returns {@code false} for all given instances, this filter will return {@code true}.
  * <p/>
  * Note that Xor can only be applied to two values.
@@ -69,9 +70,10 @@ public class Xor extends Logic
     super( lhsArgumentSelector, lhsFilter, rhsArgumentSelector, rhsFilter );
     }
 
-  /** @see cascading.operation.Filter#isRemove(cascading.flow.FlowProcess,cascading.operation.FilterCall) */
+  /** @see cascading.operation.Filter#isRemove(cascading.flow.FlowProcess, cascading.operation.FilterCall) */
   public boolean isRemove( FlowProcess flowProcess, FilterCall filterCall )
     {
+    TupleEntry arguments = filterCall.getArguments();
     Context context = (Logic.Context) filterCall.getContext();
     TupleEntry[] argumentEntries = context.argumentEntries;
     Object[] contexts = context.contexts;
@@ -82,9 +84,11 @@ public class Xor extends Logic
     lhsEntry.setTuple( filterCall.getArguments().selectTuple( argumentSelectors[ 0 ] ) );
     rhsEntry.setTuple( filterCall.getArguments().selectTuple( argumentSelectors[ 1 ] ) );
 
+    ( (ConcreteCall) filterCall ).setArguments( lhsEntry );
     filterCall.setContext( contexts[ 0 ] );
     boolean lhsResult = filters[ 0 ].isRemove( flowProcess, filterCall );
 
+    ( (ConcreteCall) filterCall ).setArguments( rhsEntry );
     filterCall.setContext( contexts[ 1 ] );
     boolean rhsResult = filters[ 1 ].isRemove( flowProcess, filterCall );
 
@@ -94,6 +98,7 @@ public class Xor extends Logic
       }
     finally
       {
+      ( (ConcreteCall) filterCall ).setArguments( arguments );
       filterCall.setContext( context );
       }
     }
